--- a/index.html
+++ b/index.html
@@ -12,54 +12,61 @@
         <div class="sidebar">
             <div class="logo-box">
                 <div class="logo">
-                    <img src="images/view-dashboard.svg" alt="Dashboard">
+                    <img src="images/icons/view-dashboard.svg" alt="Dashboard">
                 </div>
                 <div class="text">Dashboard</div>
             </div>
             <div class="nav-1">
                 <div class="logo">
-                    <img src="images/home.svg" alt="Home">
+                    <img src="images/icons/home.svg" alt="Home">
                 </div>
                 <div class="text">Home</div>
                 <div class="logo">
-                    <img src="images/card-account-details-outline.svg" alt="Profile">
+                    <img src="images/icons/card-account-details-outline.svg" alt="Profile">
                 </div>
                 <div class="text">Profile</div>
                 <div class="logo">
-                    <img src="images/message-reply.svg" alt="Messages">
+                    <img src="images/icons/message-reply.svg" alt="Messages">
                 </div>
                 <div class="text">Messages</div>
                 <div class="logo">
-                    <img src="images/clock-time-three.svg" alt="History">
+                    <img src="images/icons/clock-time-three.svg" alt="History">
                 </div>
                 <div class="text">History</div>
                 <div class="logo">
-                    <img src="images/file-multiple.svg" alt="Tasks">
+                    <img src="images/icons/file-multiple.svg" alt="Tasks">
                 </div>
                 <div class="text">Tasks</div>
                 <div class="logo">
-                    <img src="images/account-group.svg" alt="Communities">
+                    <img src="images/icons/account-group.svg" alt="Communities">
                 </div>
                 <div class="text">Communities</div>
             </div>
             <div class="nav-2">
                 <div class="logo">
-                    <img src="images/cog.svg" alt="Settings">
+                    <img src="images/icons/cog.svg" alt="Settings">
                 </div>
                 <div class="text">Settings</div>
                 <div class="logo">
-                    <img src="images/help-box.svg" alt="Support">
+                    <img src="images/icons/help-box.svg" alt="Support">
                 </div>
                 <div class="text">Support</div>
                 <div class="logo">
-                    <img src="images/shield-check.svg" alt="Privacy">
+                    <img src="images/icons/shield-check.svg" alt="Privacy">
                 </div>
                 <div class="text">Privacy</div>
             </div>
         </div>
         <div class="header">
-            <div class="search-box">Hello</div>
-            <div class="header-extra">Hello</div>
+            <div class="search-box">
+                <img src="images/icons/magnify.svg" class="search-img" alt="Search">
+                <input type="search" placeholder="">
+            </div>
+            <div class="header-exstra">
+                <img src="images/icons/bell-ring-outline.svg" class="bell-img" alt="Bell-ring">
+                <img src="images/img/alison-wang-mou0S7ViElQ-unsplash.jpg" class="profile-img" alt="Profile-img">
+                <div class="name">Morgan Oakley</div>
+            </div>
             <div class="header-profile">Hello</div>
             <div class="header-buttons">Hello</div>
         </div>
