--- a/index.html
+++ b/index.html
@@ -67,10 +67,42 @@
                 <img src="images/img/alison-wang-mou0S7ViElQ-unsplash.jpg" class="profile-img" alt="Profile-img">
                 <div class="name">Morgan Oakley</div>
             </div>
-            <div class="header-profile">Hello</div>
-            <div class="header-buttons">Hello</div>
+            <div class="header-profile">
+                <img src="images/img/alison-wang-mou0S7ViElQ-unsplash.jpg" class="profile-img-big" alt="Profile-img">
+                <div class="greeting-box">
+                    <div class="greeting-1">Hi there,</div>
+                    <div class="greeting-2">Morgan Oakley (@morgan)</div>
+                </div>
+            </div>
+            <div class="header-buttons">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
         </div>
-        <div class="main-content"></div>
+        <div class="main-content">
+            <div class="main-grid">
+                <div class="project-box">
+                    <div class="project-header">Your projects</div>
+                    <div class="card-box">
+                        <div class="card">card</div>
+                        <div class="card">card</div>
+                        <div class="card">card</div>
+                        <div class="card">card</div>
+                        <div class="card">card</div>
+                        <div class="card">card</div>
+                    </div>
+                </div>
+                <div class="announcement-trending-box">
+                    <div class="announcement-header">Announcements</div>
+                    <div class="trending-container">
+                        <div class="announcement-box">box</div>
+                        <div class="trending-header">Trending</div>
+                        <div class="trending-box">box</div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
