Admin dashboard done

--- a/index.html
+++ b/index.html
@@ -83,22 +83,144 @@
         <div class="main-content">
             <div class="main-grid">
                 <div class="project-box">
-                    <div class="project-header">Your projects</div>
+                    <div class="project-header">Your Projects</div>
                     <div class="card-box">
-                        <div class="card">card</div>
-                        <div class="card">card</div>
-                        <div class="card">card</div>
-                        <div class="card">card</div>
-                        <div class="card">card</div>
-                        <div class="card">card</div>
+                        <div class="card">
+                            <div class="card-color"></div>
+                            <div class="card-text-container">
+                                <div class="card-text-box">
+                                    <div class="card-header">Super Cool Project</div>
+                                    <div class="card-text">Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</div>
+                                </div>
+                                <div class="card-buttons">
+                                    <img src="images/icons/star-plus-outline.svg" alt="add to favorite">
+                                    <img src="images/icons/eye-plus-outline.svg" alt="See later">
+                                    <img src="images/icons/source-fork.svg" alt="Fork">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-color"></div>
+                            <div class="card-text-container">
+                                <div class="card-text-box">
+                                    <div class="card-header">Less Cool Project</div>
+                                    <div class="card-text">Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</div>
+                                </div>
+                                <div class="card-buttons">
+                                    <img src="images/icons/star-plus-outline.svg" alt="add to favorite">
+                                    <img src="images/icons/eye-plus-outline.svg" alt="See later">
+                                    <img src="images/icons/source-fork.svg" alt="Fork">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-color"></div>
+                            <div class="card-text-container">
+                                <div class="card-text-box">
+                                    <div class="card-header">Super Cool Project</div>
+                                    <div class="card-text">Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</div>
+                                </div>
+                                <div class="card-buttons">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-color"></div>
+                            <div class="card-text-container">
+                                <div class="card-text-box">
+                                    <div class="card-header">Less Cool Project</div>
+                                    <div class="card-text">Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</div>
+                                </div>
+                                <div class="card-buttons">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-color"></div>
+                            <div class="card-text-container">
+                                <div class="card-text-box">
+                                    <div class="card-header">Super Cool Project</div>
+                                    <div class="card-text">Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua.</div>
+                                </div>
+                                <div class="card-buttons">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="card-color"></div>
+                            <div class="card-text-container">
+                                <div class="card-text-box">
+                                    <div class="card-header">Less Cool Project</div>
+                                    <div class="card-text">Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</div>
+                                </div>
+                                <div class="card-buttons">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                    <img src="" alt="">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="announcement-trending-box">
                     <div class="announcement-header">Announcements</div>
                     <div class="trending-container">
-                        <div class="announcement-box">box</div>
+                        <div class="announcement-box">
+                            <div class="announcement-text-box">
+                                <div class="announcement-box-header">Site Maintenace</div>
+                                <div class="announcement-text">Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut...</div>
+                            </div>
+                            <hr width="100%" color="#CACACA" size="0.5px">
+                            <div class="announcement-text-box">
+                                <div class="announcement-box-header">Community Share Day</div>
+                                <div class="announcement-text">Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut...</div>
+                            </div>
+                            <hr width="100%" color="#CACACA" size="0.5px">
+                            <div class="announcement-text-box">
+                                <div class="announcement-box-header">Updated Privacy Policy</div>
+                                <div class="announcement-text">Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut...</div>
+                            </div>
+                        </div>
                         <div class="trending-header">Trending</div>
-                        <div class="trending-box">box</div>
+                        <div class="trending-box">
+                            <div class="trending-profile">
+                                <img src="images/img/amr-taha-RdRMWpfUChU-unsplash.jpg" alt="profile-img" class="profile-img">
+                                <div class="profile-text">
+                                    <div class="profile-at">@tegan</div>
+                                    <div class="profile-name">World Peace Builder</div>
+                                </div>
+                            </div>
+                            <div class="trending-profile">
+                                <img src="images/img/alison-wang-mou0S7ViElQ-unsplash.jpg" alt="profile-img" class="profile-img">
+                                <div class="profile-text">
+                                    <div class="profile-at">@morgan</div>
+                                    <div class="profile-name">Super Cool Project</div>
+                                </div>
+                            </div>
+                            <div class="trending-profile">
+                                <img src="images/img/julien-tromeur-6-adg66qleM-unsplash.jpg" alt="profile-im" class="profile-img">
+                                <div class="profile-text">
+                                    <div class="profile-at">@kendall</div>
+                                    <div class="profile-name">Life Changing App</div>
+                                </div>
+                            </div>
+                            <div class="trending-profile">
+                                <img src="images/img/rocco-dipoppa-Nh4rV0ParHw-unsplash.jpg" alt="profile-img" class="profile-img">
+                                <div class="profile-text">
+                                    <div class="profile-at">@alex</div>
+                                    <div class="profile-name">No Traffic Maker</div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
